syntax = "proto3";
option java_package = "com.mjoys.zjh.proto";
option java_outer_classname = "Protobufs";

// repeated string names = 1;

//enum Action {
//	ACTION_CONNECT		=	0;	// socket连接
//}

// 数据传输原型
//message TransferData {
//	Action	action		= 1; // 数据类型(动作)
//    bytes data			= 2; // 传输的二进制数据
//}

message User {
	string objectId					=	1;
	string username					=	2;
	bool mobilePhoneNumberVerified	=	3;
	string mobilePhoneNumber		=	4;
	int32 totalInning				=	5;
	int32 winInning					=	6;
	int32 diamond					=	7;
	int32 coin						=	8;
	string deviceId					=	9;
	int32 id						=	10;
	string authData					=	11;
	uint64 createdAt				=	12;
	uint64 updatedAt				=	13;
	bool placement					=	14; // for test
	string headerUrl				=	15;
}

message Seat {
	int32 seatID					=	1;
	int32 callCoin					=	2;
	User user						=	3;
	bool isPrepared					=	4;
}

message Table {
	int32 tableID					=	1;
	repeated Seat seats				=	2;
	int32 minBet					=	3;
	int32 maxBet					=	4;
	int32 round						=	5;
}

enum GameAction {
	PREPARE						=	0;// 准备
	ADDBET						=	1;// 加注
	FOLLOW						=	2;// 跟注
	GIVEUP						=	3;// 放弃
	COMPARE						=	4;// 比牌
	WATCH						=	5;// 看牌
	COUNTDOWN_START				=	6;// 倒计时开始
	SEND_CARD					=	7;// 发牌
	TURN						=	8;// 到某个人出牌
	END							=	9;// 游戏结束
}

message GameOperate {
	GameAction action				=	1;
	int32 seatID					=	2;
	int32 placementSeatID			=	3; // 用户比较的第二个玩家ID/
	int32 coin						=	4;
	repeated bytes cards			=	5; // 牌
	uint64 millis					=	6; // 时间
}
